<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1018"
    tools:context=".Accounts.RecoverActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/getback"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/getback_email"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/recover_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:hint="....."
            android:paddingStart="20dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/recover_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:text="@string/login_main"
            android:textColor="#FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_border"
            android:text="@string/getback_send"
            android:textAllCaps="false"
            android:textColor="#E4ECF5"
            android:textSize="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>