<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1018"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.090" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:drawablePadding="10dp"
            android:paddingStart="90dp"
            android:text="@string/login_google"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/google_36" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:drawablePadding="10dp"
            android:paddingStart="90dp"
            android:text="@string/login_facebook"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/facebook_36" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/login_main"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>